added _config.yml and other things

--- a/index.html
+++ b/index.html
@@ -10,13 +10,14 @@
 <body>
     <div id="overview">
         <div id="top-map">
-            <div id="home-map">Home</div>
+            <button id="home-map">Home</button>
             <div id="about-map">About us</div>
             <div id="whoami-map">Who are we?</div>
             <div id="projects-map">Projects</div>
         </div>
-        <h1>MrMonkey's website</h1>
-    </div>
+        <div id="title-map">
+            <h1>MrMonkey's website</h1>
+        </div>
     <div id="links">
         <a id="discord-link" href="https://discord.gg/MuPgaunhtd">Discord server</a>
     </div>
