--- a/index.html
+++ b/index.html
@@ -9,11 +9,12 @@
 </head>
 <body>
     <div id="overview">
+        
         <div id="top-map">
-            <button id="home-map">Home</button>
-            <div id="about-map">About us</div>
-            <div id="whoami-map">Who are we?</div>
-            <div id="projects-map">Projects</div>
+            <button class="home-map" role="button">Home</button>
+            <button id="about-map">About us</button>
+            <button id="whoami-map">Who are we?</button>
+            <button id="projects-map">Projects</button>
         </div>
         <div id="title-map">
             <h1>MrMonkey's website</h1>
