--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" type="text/css" href="https://mrmonkeyongithub.github.io/style.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="icon" type="image/x-icon" href="/media/favicon/Favicon.png">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,12 +10,11 @@
 </head>
 <body>
     <div id="overview">
-        
-        <div id="top-map">
-            <button class="home-map" role="button">Home</button>
-            <button id="about-map">About us</button>
-            <button id="whoami-map">Who are we?</button>
-            <button id="projects-map">Projects</button>
+        <div id="top">
+            <button class="top-buttons" id="home-map" role="button">Home</button>
+            <button class="top-buttons" id="about-map">About us</button>
+            <button class="top-buttons" id="whoami-map">Who are we?</button>
+            <button class="top-buttons" id="projects-map">Projects</button>
         </div>
         <div id="title-map">
             <h1>MrMonkey's website</h1>
