--- a/index.html
+++ b/index.html
@@ -6,21 +6,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MrMonkey's website</title>
+    <title>MrMonkey's Website</title>
 </head>
 <body>
     <div id="overview">
+        <div class="background-image">
+
+        </div>  
+        <div class="background-box-top"></div>
         <div id="top">
             <button class="top-buttons" id="home-map" role="button">Home</button>
             <button class="top-buttons" id="about-map">About us</button>
-            <button class="top-buttons" id="whoami-map">Who are we?</button>
             <button class="top-buttons" id="projects-map">Projects</button>
         </div>
         <div id="title-map">
-            <h1>MrMonkey's website</h1>
+            <h1 id="title">MrMonkey's Website</h1>
         </div>
-    <div id="links">
-        <a id="discord-link" href="https://discord.gg/MuPgaunhtd">Discord server</a>
+        <div class="links">
+            <a id="discord-link" href="https://discord.gg/MuPgaunhtd">Discord server</a>
+        </div>
     </div>
 </body>
 </html>
