changed from troll to normal

--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
 <body>
     <div id="overview">
         <div class="background-image">
-
+            <div id=""
         </div>  
         <div class="background-box-top"></div>
-        <div id="top">
-            <button class="top-buttons" id="home-map" role="button">Home</button>
-            <button class="top-buttons" id="about-map">About us</button>
-            <button class="top-buttons" id="projects-map">Projects</button>
-        </div>
+            <div id="top">
+                <button class="top-buttons" id="home-map" role="button">Home</button>
+                <button class="top-buttons" id="about-map">About us</button>
+                <button class="top-buttons" id="projects-map">Projects</button>
+            </div>
         <div id="title-map">
             <h1 id="title">MrMonkey's Website</h1>
         </div>
